[package]
name = "rust_mark"
version = "0.1.0"
edition = "2018"
description = "Tool for CPU benchmarking"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.5"
sysinfo = "0.29.7"
# ndarray = "0.15.6"

[profile.release]
lto = "fat"
strip = "debuginfo"

